@@ -35,8 +35,8 @@
         = render "projects/notes/diff_notes_with_reply", notes: comments, line: raw_diff_lines[index].text
 
   - if last_line > 0
-    = render "projects/diffs/match_line", {line: "",
-      line_old: last_line, line_new: last_line, bottom: true, new_file: diff_file.new_file}
+    = render "projects/diffs/match_line", { line: "",
+      line_old: last_line, line_new: last_line, bottom: true, new_file: diff_file.new_file }
 
 - if diff_file.diff.blank? && diff_file.mode_changed?
   .file-mode-changed
