@@ -203,11 +203,16 @@ describe Note, models: true do
   end
 
   describe "set_award!" do
-    let(:issue) { create :issue }
+    let(:merge_request) { create :merge_request }
 
     it "converts aliases to actual name" do
-      note = create :note, note: ":+1:", noteable: issue
+      note = create(:note, note: ":+1:", noteable: merge_request)
       expect(note.reload.note).to eq("thumbsup")
+    end
+
+    it "is not an award emoji when comment is on a diff" do
+      note = create(:note, note: ":blowfish:", noteable: merge_request, line_code: "11d5d2e667e9da4f7f610f81d86c974b146b13bd_0_2")
+      expect(note.reload.note).to eq(":blowfish:")
     end
   end
 end
